assets/css/style.css
/* ... */
        /* END OF .project :HOVER EFFECT */
        /* Project Background images */
        
        #project-3dphoto {
            background-image: url('./../images/project-3dphoto.png');
        }
        
        #project-poker {
            background-image: url('./../images/project-poker.png');
        }
        
        #project-onepalm {
            background-image: url('./../images/project-onepalm.png');
        }
        
        #project-run-buddy {
            background-image: url('./../images/project-run-buddy.png');
        }
        
        #project-horiseon {
            background-image: url('https://qcent.github.io/horiseon/assets/images/digital-marketing-meeting.jpg');
        }
        /* END OF PROJECT BACKGROUNDS */
        /* END of WORK / PROJECTS */
        /* CONTACT ME Styling */
        
        .contact-links ul {
            display: flex;
            flex-wrap: wrap;
            /* nice padding around everything */
            justify-content: space-around;
            /* centered vertically */
            align-content: space-around;
            /* no bullet points */
            list-style-type: none;
            /* use all the space so we can be centered vertically */
            height: 100%;
        }
        
        .contact-links li a {
            font-size: 22px;
            color: var(--dark-text);
            /* these 2 lines create the underline look */
            padding: 0 6px;
            border-bottom: 4px solid var(--norm-text);
            /* next three lines set default state of hover effect */
            transition: .3s;
            position: relative;
            top: 0;
        }
        
        .contact-links li a:hover {
            /* raises text up 2px and drops a nice shadow */
            top: -2px;
            padding-bottom: 2px;
            box-shadow: 0 12px 5px -5px rgba(43, 46, 53, .8);
        }
        /* END OF CONTACT ME Styling */
        /* MESSING AROUND  */
        
        .contact-links li:nth-child(2) {
            /* put the 2nd child in contact links "Cave Wall" last in list 
    /* default order value is 0 */
            order: 1;
        }
        /* END OF MESSING AROUND */
        
        @media (prefers-color-scheme: dark) {
            /* MEDIA QUERY FOR DARK MODE */
            /* a reimagining of the layout in a nice darker format */
             :root {
                /*  light-text gets dark */
                --light-text: rgb(67, 99, 99);
            }
            .section-title {
                /* these next two lines add a nice thin outline on titles */
                -webkit-text-stroke-width: 1px;
                -webkit-text-stroke-color: var(--dark-text);
            }
            main section {
                /* more padding between sections that scales with screeen width */
                padding-top: 4vw;
                padding-bottom: 4vw;
            }
            main section:hover {
                /* add shadow and make it appear on top of other sections */
                box-shadow: 0 8px 6px -6px var(--dark-text);
                z-index: 1;
            }
            main section:first-child {
                /*  new background for about me section */
                background-color: burlywood;
                background: radial-gradient(circle, rgba(65, 53, 36, 1) 0%, rgba(0, 0, 0, 1) 100%);
                /* new text position */
                text-align: right;
            }
            .about-info .wrapper {
                /*  new margins on the about me text */
                margin: 0 5%;
            }
            main section:nth-child(2) {
                /*  new background for about work section */
                background: rgb(15, 14, 12);
                background: linear-gradient(200deg, rgba(15, 14, 12, 1) 0%, rgba(92, 88, 84, 1) 100%);
            }
            main section:nth-child(3) {
                /*  new background for contact me section */
                background: rgb(125, 115, 105);
                background: radial-gradient(circle, rgb(110, 102, 71) 0%, rgb(59, 53, 47) 100%);
            }
            @media screen and (min-width: 1024px) {
                .head-shot {
                    /* when screen is wide enough start scaling head-shot with section padding*/
                    width: calc(225px + 4vw) !important;
                    height: calc(225px + 4vw) !important;
                }
            }
        }
        /******* END OF DARK MODE ******/
        
        @media (hover:none) {
            /* on a mobile screen make the .git-link always there */
            .project~.git-link {
                bottom: 20px;
                opacity: 1;
            }
            .git-link a {
                padding: 16px 4px 16px 4px;
            }
        }
        /* ****** END of MOBILE *****/
        /* MEDIA QUERY FOR LARGE SCREENS */
        
        @media screen and (min-width: 1200px) {
            /* this will be applied on any screen larger than 1300px */
            /* some elements are too small when this wide */
            .section-content {
                font-size: 18px;
            }
            .project-wrapper {
                height: 300px;
            }
            #work-section .project-wrapper:first-child {
                /* make first project more prominent */
                /* double the height of other projects */
                height: 600px;
            }
        }
        
        @media screen and (min-width: 1500px) {
            /* this will be applied on any screen larger than 1500px */
            /* text in section content is too small when this wide */
            .section-content {
                font-size: 21px;
            }
        }
/* ... */

